Fix precip icon alignment for weekly forecast on small screen

--- a/src/components/Forecast/Weekly/WeeklyForecast.module.scss
+++ b/src/components/Forecast/Weekly/WeeklyForecast.module.scss
@@ -85,7 +85,7 @@
             display: flex;
             flex-direction: column;
             row-gap: 0.5em;
-            // padding: 0.5em 1.5em 0em;
+            padding: 0.5em 1.5em 0em;
             background-color: var(--card-background);
             border: var(--border-weight) var(--border-style) var(--border-color);
             border-radius: 15px;
@@ -110,13 +110,13 @@
                     font-weight: 600;
                     width: 100%;
                     display:flex;
-                    justify-content: center;
+                    // justify-content: center;
                 }
                 & .imageContainer {
                     display: flex;
                     align-items: center;    
                     width: 100%;
-                    justify-content: center;
+                    // justify-content: center;
                     img{
                         width: 100%;
                         max-width: 34px;
@@ -126,9 +126,8 @@
                 & .rainPrecip {
                     padding-left: 0.3em;
                     display:flex;
-                    width: 100%;
-                    justify-content: center;
-
+                    width: 100%;                    
+                    // padding-left: 40px;
                     & img {
                         width: 16px;
                         height: auto;
@@ -136,7 +135,7 @@
                 }
                 & .highLowContainer {
                     width: 100%;
-                    justify-content: center;
+                    // justify-content: center;
                     display: flex;
                     column-gap: 0.1em;
                 }
